# servers

Favic/V1/: Cargo.toml
Favic/V1/src/: main.rs
Favic/V1/src/utils/: responses.rs
