[package]
name = "favic"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full", "parking_lot"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1.3"
bytes = "1.10.1"
chrono = { version = "0.4", features = ["serde"] }
multer = "3.0.0"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io", "codec"] }
pin-project-lite = "0.2"
smallvec = "1.11"
aws-sdk-s3 = "1.104.0"
aws-config = "1.8.6"
aws-credential-types = "1.2.6"
